--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,13 @@ classifiers = [
 ]
 
 dependencies = [
-    "nextflow>=24.04.4",
+    "nextflow>=24.4.4",
     "pyyaml>=6.0",
-    "Click>=8.1.3"
+    "Click>=8.1.3", 
 ]
 
 [tool.setuptools]
 packages = ["atavide"]  # Specify the directories you want as packages
+
+[project.scripts]
+atavide = "atavide.__main__:main"
