upto mmseqs taxa

--- a/atavide/workflow/nextflow.config
+++ b/atavide/workflow/nextflow.config
@@ -9,6 +9,13 @@ profiles{
 }
 
 conda.enabled = true
+
+singularity.enabled = true
+//process {
+//    withName:CHEKCM2 {
+//        container = 'image_name_1'
+//    }
+
 params {
     hostFilter = false
 }
